2nd iteration of SourceSet, removed ClassPathPart, enforce scheme in uri()